--- a/TrafficLights/Base.lproj/Main.storyboard
+++ b/TrafficLights/Base.lproj/Main.storyboard
@@ -22,6 +22,10 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dN3-aF-mxW">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="128" id="dJP-Wo-Xb5"/>
+                                            <constraint firstAttribute="height" constant="128" id="x4T-UG-leB"/>
+                                        </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PyR-uM-iMv">
                                         <rect key="frame" x="0.0" y="194" width="128" height="128"/>
@@ -33,9 +37,10 @@
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="LZK-BT-Eb2" firstAttribute="top" secondItem="ePS-ay-6eQ" secondAttribute="top" constant="388" id="Ees-3h-Mm8"/>
-                                    <constraint firstItem="PyR-uM-iMv" firstAttribute="top" secondItem="ePS-ay-6eQ" secondAttribute="top" constant="194" id="ocZ-Th-Jq1"/>
-                                    <constraint firstItem="PyR-uM-iMv" firstAttribute="centerY" secondItem="ePS-ay-6eQ" secondAttribute="centerY" id="wS4-sA-CvT"/>
+                                    <constraint firstItem="LZK-BT-Eb2" firstAttribute="width" secondItem="dN3-aF-mxW" secondAttribute="width" id="D9q-8K-omV"/>
+                                    <constraint firstItem="LZK-BT-Eb2" firstAttribute="height" secondItem="dN3-aF-mxW" secondAttribute="height" id="MtW-R5-49J"/>
+                                    <constraint firstItem="PyR-uM-iMv" firstAttribute="top" secondItem="dN3-aF-mxW" secondAttribute="bottom" constant="66" id="apO-K2-efX"/>
+                                    <constraint firstItem="LZK-BT-Eb2" firstAttribute="top" secondItem="PyR-uM-iMv" secondAttribute="bottom" constant="66" id="hlj-Bi-Oa8"/>
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MaE-1R-qQk">
