--- a/TrafficLights/Base.lproj/Main.storyboard
+++ b/TrafficLights/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                                 <state key="normal" title="NEXT"/>
                                 <buttonConfiguration key="configuration" style="plain" title="START"/>
                                 <connections>
-                                    <action selector="trafficButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="g5N-u3-zLE"/>
+                                    <action selector="trafficButtonDidOn" destination="BYZ-38-t0r" eventType="touchUpInside" id="g5N-u3-zLE"/>
                                 </connections>
                             </button>
                         </subviews>
